# gym-python

./: README.md  SETUP.md  db.sqlite3  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
frontend/: index.html  styles.css
gym/: admin.py  forms.py  models.py  urls.py  views.py
gym/migrations/: 0001_initial.py
gym/static/gym/: styles.css
gym/templates/gym/: add_member.html  dashboard.html  delete_member.html  login.html  record_payment.html
gym_monitoring/: .storage.py.swp  cli.py  storage.py  utils.py
gym_web/: asgi.py  settings.py  urls.py  wsgi.py
