[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-monitoring"
version = "0.1.0"
description = "CLI tool to monitor gym admissions and fee due dates"
authors = [{name = "Sanjay Santhosh"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tabulate>=0.9.0"
]

[project.scripts]
gym-monitor = "gym_monitoring.cli:main"
