[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-monitoring"
version = "0.1.0"
description = "Django web application for gym membership monitoring"
authors = [{name = "Sanjay Santhosh"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2.0",
    "tabulate>=0.9.0"
]
